--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -32,7 +32,7 @@
         gap: 20px;
         background-color: $yellow-orange;
         border-radius: 8px;
-        margin: 4em 0;
+        margin: 3vw 0;
         padding: 30px 17px;
 
         &__search-box {
@@ -115,7 +115,8 @@
             
             .button--big {
                 flex: 1;
-                margin-bottom: 0;
+                padding: 7px;
+                margin: auto 0 0;
             }
         }
     }
@@ -125,6 +126,10 @@
         
         &__img {
             margin-bottom: 40px;
+
+            img {
+                width: 50%;
+            }
         }
 
         &__content {
