--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -6,7 +6,7 @@
 
         &:focus-within .task,
         &:hover .task {
-            box-shadow: 1px 5px 22px 0px rgba(0,0,0,0.3), 0px 21px 50px -6px rgba(0,0,0,0.2);
+            box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.25);
             transform: translateY(-10px);
             position: absolute;
             height: 125%;
